# X12

./: .gitignore  dub.json  dub.selections.json
source/: CODE_OVERVIEW.md  CONTRIBUTING.md  COPYING  NEWS  README.md  meson.build  meson_options.txt  xlibre-server.pc.in  xorg-server.m4  xorg-server.pc.in
source/Xext/: bigreq.d  dpms.d  dpmsproc.d  geext.d  geext_priv.d  hashtable.d  meson.build  panoramiX.d  panoramiXh.d  panoramiXprocs.d  panoramiXsrv.d  saver.d  security.d  securitysrv.d  shape.d  shm.d  shm_priv.d  sleepuntil.d  sync.d  syncsrv.d  xace.d  xacestr.d  xcmisc.d  xf86bigfont.d  xf86bigfontsrv.d  xres.d  xselinux.d  xselinux_ext.d  xselinux_hooks.d  xselinux_label.d  xselinuxint.d  xtest.d  xvdisp.d  xvdix_priv.d  xvmain.d  xvmc.d
source/Xext/damage/: damageext.c  damageext.d  damageext_priv.d  damageext_priv.h
source/Xext/dri2/: dri2.c  dri2ext.c  dri2int.h  meson.build
source/Xext/dri2/pci_ids/: i810_pci_ids.h  i915_pci_ids.h  i965_pci_ids.h  pci_id_driver_map.h  pci_id_util.h  r200_pci_ids.h  r300_pci_ids.h  r600_pci_ids.h  radeon_pci_ids.h  radeonsi_pci_ids.h  virtio_gpu_pci_ids.h  vmwgfx_pci_ids.h
source/Xext/namespace/: config.c  hook-client.c  hook-clientstate.c  hook-device.c  hook-ext-access.c  hook-ext-dispatch.c  hook-init-rootwindow.c  hook-receive.c  hook-resource.c  hook-server.c  hook-windowproperty.c  hooks.h  namespace.c  ns.conf.example
source/Xi/: XIstubs.d  allowev.d  chgdctl.d  chgfctl.d  chgkbd.d  chgkmap.d  chgprop.d  chgptr.d  closedev.d  devbell.d  exevents.d  exglobals.d  extinit.d  getbmap.d  getdctl.d  getfctl.d  getfocus.d  getkmap.d  getmmap.d  getprop.d  getselev.d  getvers.d  grabdev.d  grabdevb.d  grabdevk.d  gtmotion.d  handlers.d  listdev.d  opendev.d  queryst.d  selectev.d  sendexev.d  setbmap.d  setdval.d  setfocus.d  setmmap.d  setmode.d  stubs.d  ungrdev.d  ungrdevb.d  (+16 more)
source/composite/: compalloc.d  compext.d  compinit.d  compint.d  compositeext_priv.d  compoverlay.d  compwindow.d  meson.build
source/config/: config-backends.d  config.d  dbus-core.d  hal.d  hotplug_priv.d  meson.build  udev.d  wscons.d
source/dbe/: dbe.d  dbestruct.d  midbe.d
source/dix/: atom.d  atom_priv.d  callback_priv.d  client.d  client_priv.d  color.d  colormap.d  colormap_priv.d  cursor.d  cursor_priv.d  devices.d  devices_priv.d  dispatch.d  display.d  dix_priv.d  dixfonts.d  dixgrabs_priv.d  dixstruct_priv.d  dixutils.d  enterleave.d  eventconvert.d  events.d  exevents_priv.d  extension.d  extension_priv.d  gc.d  gc_priv.d  gestures.d  getevents.d  globals.d  glyphcurs.d  grabs.d  input_priv.d  inpututils.d  inpututils_priv.d  lookup.d  main.d  meson.build  pixmap.d  privates.d  (+30 more)
source/doc/: Xinput.xml  Xserver-spec.xml
source/dri3/: dri3.d  dri3_priv.d  dri3_request.d  dri3_screen.d  meson.build
source/exa/: exa.d  exa_accel.d  exa_classic.d  exa_driver.d  exa_glyphs.d  exa_migration_classic.d  exa_migration_mixed.d  exa_mixed.d  exa_offscreen.d  exa_priv.d  exa_render.d  exa_unaccel.d  meson.build
source/externs/: pixman.i
source/fb/: fb_priv.d  fballpriv.d  fbarc.d  fbbits.d  fbblt.d  fbbltone.d  fbcmap_mi.d  fbcopy.d  fbfill.d  fbfillrect.d  fbfillsp.d  fbgc.d  fbgetsp.d  fbglyph.d  fbimage.d  fbline.d  fboverlay.d  fbpict.d  fbpict_priv.d  fbpixmap.d  fbpoint.d  fbpush.d  fbscreen.d  fbseg.d  fbsetsp.d  fbsolid.d  fbtile.d  fbtrap.d  fbutil.d  fbwindow.d  meson.build
source/glx/: clientinfo.d  createcontext.d  extension_string.d  glxcmds.d  glxcmdsswap.d  glxcontext.d  glxdrawable.d  glxext.d  glxscreens.d  glxserver.d  glxutil.d  indirect_dispatch.d  indirect_dispatch_swap.d  indirect_program.d  indirect_reqsize.d  indirect_size.d  indirect_size_get.d  indirect_table.d  indirect_texture_compression.d  indirect_util.d  meson.build  render2.d  render2swap.d  renderpix.d  renderpixswap.d  rensize.d  single2.d  single2swap.d  singlepix.d  singlepixswap.d  singlesize.d  swap_interval.d  unpack.d  vnd_dispatch_stubs.d  vndcmds.d  vndext.d  vndserver_priv.d  vndservermapping.d  vndservervendor.d  xfont.d
source/glx/glx_dri/: glxdri2.c  glxdri2.d  glxdricommon.c  glxdricommon.d  glxdriswrast.d
source/hw/kdrive/: meson.build
source/hw/kdrive/ephyr/: ephyr.c  ephyr.d  ephyr_draw.c  ephyr_draw.d  ephyr_glamor.c  ephyr_glamor.d  ephyr_glamor.h  ephyrcursor.c  ephyrcursor.d  ephyrinit.c  ephyrinit.d  ephyrlog.d  ephyrvideo.c  ephyrvideo.d  hostx.c  hostx.d  meson.build
source/hw/kdrive/ephyr/man/: Xephyr.man
source/hw/kdrive/fbdev/: Xfbdev.man  fb_glamor.c  fb_glamor.d  fbdev.c  fbdev.d  fbdev.h  fbinit.c  fbinit.d  meson.build
source/hw/kdrive/linux/: keyboard.c  keyboard.d  linux.c  linux.d  meson.build  mouse.c  mouse.d  ms.c  ms.d  ps2.c  ps2.d  tslib.c  tslib.d
source/hw/kdrive/linux/evdev/: evdev.c  evdev.d  evdev.h  evdev_autodetect.c  evdev_autodetect.d
source/hw/kdrive/src/: kcmap.c  kcmap.d  kd_glamor_xv.c  kd_glamor_xv.d  kdrive-config.h.meson.in  kdrive.c  kdrive.d  kdrive.h  kinfo.c  kinfo.d  kinput.c  kinput.d  kmode.c  kmode.d  kshadow.c  kshadow.d  kxv.c  kxv.d  kxv.h  meson.build
source/hw/xfree86/compat/: 10-nvidia-modules.conf.debian.in  10-nvidia-modules.conf.in  10-nvidia.conf.debian.in  10-nvidia.conf.in  clientexception.d  geeventinit.c  geeventinit.d  log.d  meson.build  nvidiabug.d  ones.c  ones.d  timercheck.c  timercheck.d  xf86Helper.d  xf86_compat.d
source/hw/xfree86/glamor_egl/: glamor_eglmodule.d  glamor_xf86_egl.c  glamor_xf86_egl.d  glamor_xf86_xv.d  meson.build
source/hw/xfree86/modes/: meson.build  xf86Crtc.c  xf86Crtc.d  xf86Cursors.c  xf86Cursors.d  xf86DiDGA.c  xf86DiDGA.d  xf86EdidModes.c  xf86EdidModes.d  xf86Modes.c  xf86Modes.d  xf86RandR12.c  xf86RandR12.d  xf86RandR12_priv.d  xf86Rotate.c  xf86Rotate.d  xf86gtf.c  xf86gtf.d
source/miext/sync/: meson.build  misync.c
source/randr/: meson.build  randr.d  randrstr_priv.d  rrcrtc.d  rrdispatch.d  rrdispatch_priv.d  rrinfo.d  rrlease.d  rrmode.d  rrmonitor.d  rroutput.d  rrpointer.d  rrproperty.d  rrprovider.d  rrproviderproperty.d  rrscreen.d  rrtransform.d  rrxinerama.d
source/test/info/: meson.build
(+884 files in other folders)
